# thread-pool

./: .gitignore  CMakeLists.txt  README.md  ThreadPool.patch  affinity.patch
example/: example.cpp  main.cpp
include/: SafeQueue.h  Task.h  TasksQueue.h  ThreadPool.h  ThreadWorker.h
src/: main.cpp
